<resources>
    <string name="app_name">CEDIPROAPP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="c_digo_de_verificaci_n">Código de verificación</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
</resources>
