<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.cedipro.android.LoginActivity">


    <EditText
        android:id="@+id/usuario"
        style="@style/EditText"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="232dp" />

    <EditText
        android:id="@+id/contraseña"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/iniciarSesion"
        android:onClick="login"
        app:layout_constraintTop_toBottomOf="@+id/contraseña"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registro"
        android:onClick="signup"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp" />

    <ImageView
        android:id="@+id/imgCediproLG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toTopOf="@+id/usuario"
        app:srcCompat="@drawable/cedipro"
        tools:layout_editor_absoluteX="73dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
