<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="90dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@color/colorPrimary"
    tools:context="app.cedipro.android.SignUpActivity">

    <ImageView
        android:id="@+id/imgCediproSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cedipro"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="72dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            style="@style/EditText"
            android:id="@+id/SUusuario"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/SUcontraseña"
            style="@style/EditText"
            android:layout_marginTop="16dp"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/SUcodigo_verificacion"
            style="@style/EditText"
            android:layout_marginTop="16dp"
            android:hint="@string/c_digo_de_verificaci_n"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/crear_cuenta"
        android:onClick="crearCuenta" />

</LinearLayout>
